fix: white-space fix to word wrap/horizontal scrolling error

--- a/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
@@ -181,7 +181,6 @@ $border-radius: 4px;
             pre {
                 margin: 0;
                 padding-right: 110px;
-                overflow: auto;
                 max-height: inherit;
                 box-sizing: border-box;
                 width: 100%;
@@ -192,8 +191,8 @@ $border-radius: 4px;
                 min-width: 100%;
                 line-height: 1.6;
                 max-width: 75%;
+                overflow: auto;
                 box-sizing: border-box;
-                white-space: pre;
                 word-wrap: break-word;
                 word-break: normal;
 
